# itens-vencendo-v2

./: .gitignore  COMO_EXECUTAR.md  DEPLOY_SERVIDOR.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt  run-server.ps1  run.ps1
backend/app/: __init__.py  config.py  constants.py  dependencies.py  main.py
backend/app/core/: __init__.py  exceptions.py  logging_config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: user.py
backend/app/repositories/: base.py  dashboard_repository.py  expired_repository.py  predictive_repository.py  teste_repository.py  user_repository.py
backend/app/routers/: auth.py  dashboard.py  expired_items.py  predictive.py  teste.py
backend/app/schemas/: auth.py  dashboard.py  expired.py  predictive.py  teste.py
backend/app/services/: dashboard_service.py  expired_service.py  predictive_service.py  teste_service.py
backend/app/utils/: cache.py  date_utils.py  export.py
backend/inventory_analytics_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: hash_password.py  test_db_connection.py
docs/: DIAGNOSTICO_CONSUMO_MEDIO.md  MVP.docx  RELATORIO_ANALISE_PREDITIVA.md  TUTORIAL_VM.md  ~$MVP.docx
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: client.ts  endpoints.ts
frontend/src/components/: Layout.tsx
(+7 files in other folders)
